--- a/templates/employees.html
+++ b/templates/employees.html
@@ -16,12 +16,24 @@
    }
   </style>
 
-
-<body>
+<body">
 
 {% extends 'index.html' %}
 
 {% block content %}
+
+<br><br>
+
+<form action="" method="post">
+	<p>
+	    <label for="cou_row">Укажите к-во записей (0 - вывод всех)</label><br>
+	    <input type="text" name="cou_row" value="0">
+	</p>
+	<p>
+	    <input type="submit">
+	</p>
+</form>
+
 <h2>Список сотрудников</h2>
 <table >
     <tr align="center" style="background: orange;" >
@@ -43,7 +55,7 @@
 {% endblock %}
 
 
-
 </body>
+
 </html>
 
