--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
 
 </style>
 
-<body>
+<body bgcolor="#FFE4B5">
 
 <header>
     <ul id="menu" style="border: 1px;">
@@ -87,6 +87,9 @@
 <p><b>ТОВ "ФК" Кредіплюс"</b> <i>(торгова марка FinX) - фінансова компанія, експерт у сфері споживчого кредитування фізичних осіб.<br>
 Офіси FinX розташовані в більшості міст України, наші співробітники професіонали своєї справи і завжди знайдуть для Вас краще рішення.<br>
     Якщо Ви починаєте ремонт, хочете оновити побутову техніку, плануєте навчання дітей, зібралися у відпустку і Вам потрібна фінансова допомога - це до нас! До зустрічі!</i></p>
+
+
+
 {% block content %}
 {{ content }}
 {% endblock %}
