--- a/templates/applications.html
+++ b/templates/applications.html
@@ -23,6 +23,10 @@
 
 {% block content %}
 
+<div style="color:red; font-weight: bold">
+{{ apply_info }}
+</div>
+
 <br><br>
 <form action="" method="post">
 	<p>
@@ -40,7 +44,6 @@
     <tr align="center" style="background: orange;" >
         <td >ID</td>
         <td>Дата создания</td>
-        <td>Дата обновления</td>
         <td>Тип</td>
         <td>Описание</td>
         <td>Статус</td>
@@ -52,11 +55,11 @@
         <td align="center">{{ app[0] }}</td>
         <td align="center">{{ app[1] }}</td>
         <td align="center">{{ app[2] }}</td>
-        <td align="center">{{ app[3] }}</td>
+        <td >{{ app[3] }}</td>
         <td >{{ app[4] }}</td>
         <td align="center">{{ app[5] }}</td>
         <td align="center">{{ app[6] }}</td>
-        <td>{{ app[7] }}</td>
+
 
     </tr>
     {% endfor %}
