--- a/templates/employees.html
+++ b/templates/employees.html
@@ -16,7 +16,7 @@
    }
   </style>
 
-<body">
+<body>
 
 {% extends 'index.html' %}
 
@@ -24,32 +24,41 @@
 
 <br><br>
 
-<form action="" method="post">
-	<p>
-	    <label for="cou_row">Укажите к-во записей (0 - вывод всех)</label><br>
-	    <input type="text" name="cou_row" value="0">
-	</p>
-	<p>
-	    <input type="submit">
-	</p>
-</form>
 
-<h2>Список сотрудников</h2>
-<table >
-    <tr align="center" style="background: orange;" >
-        <td >ID</td>
-        <td>ФИО</td>
-        <td>Должность</td>
-        <td>Подразделение</td>
-    </tr>
-    {% for emp in employees_list %}
-    <tr>
-        <td align="center">{{ emp[0] }}</td>
-        <td>{{ emp[1] }}</td>
-        <td>{{ emp[2] }}</td>
-        <td align="center">{{ emp[3] }}</td>
-    </tr>
-    {% endfor %}
+ <div style="color:red; font-weight: bold">
+    {{ emp_result }}
+ </div>
+
+        <form action="" method="post">
+            <p>
+                <label for="cou_row">Укажите к-во записей (0 - вывод всех)</label><br>
+                <input type="text" name="cou_row" value="0">
+            </p>
+            <p>
+                <input type="submit">
+            </p>
+        </form>
+
+        <h2>Список сотрудников</h2>
+
+    <table >
+
+        <tr align="center" style="background: orange;" >
+            <td >ID</td>
+            <td>ФИО</td>
+            <td>Должность</td>
+            <td>Подразделение</td>
+        </tr>
+
+        {% for emp in employees_list %}
+        <tr>
+            <td align="center">{{ emp[0] }}</td>
+            <td>{{ emp[1] }}</td>
+            <td>{{ emp[2] }}</td>
+            <td align="center">{{ emp[3] }}</td>
+        </tr>
+        {% endfor %}
+
 
 </table>
 {% endblock %}
